--- a/Case Study/index.html
+++ b/Case Study/index.html
@@ -8,23 +8,23 @@
     </head>
 <header>
    <div class="container">
-      <h1>Project Name</h1>
-      <h2>Elevator pitch goes here. It's like a Hipmunk for Yaks</h2>
+      <h1>IDM241 Case study</h1>
+      <h2>"Send Mail"</h2>
       <ul class="project-info">
-         <li>Spring 2018</li>
-         <li>UX Design</li>
+         <li>Winter 2021</li>
+         <li>Alex Eyo</li>
          <li>Team Name</li>
       </ul>
    </div>
 </header>
 <section class="image">
-   <img src="http://melissacabral.com/demos/ux/images/yaks.jpg" alt="">
+   <img src="heroimage .png" alt="">
    </div>
 </section>
 
 <section>
    <div class="container">
-      <h1>Objective</h1>
+      <h1>Overview:</h1>
 
       <p>This need existed, so we built this thing to make everyone's life better, and learned a lot about people along the way. Did you know that 99% of all yaks have felt that booking travel is complicated and confusing?</p>
    </div>
@@ -36,15 +36,15 @@
 
 <section>
    <div class="container">
-      <h1>Research</h1>
-      <p>To get to know the people that this product would mean the most to, we set up our prototype in the middle of a herd of yaks and observed their behavior when trying to book a vacation. </p>
+      <h1>Background:</h1>
+      <p>The original idea was to create a microinteraction with the trigger of click,that would indicate that the user had received new mail. However, the logic behind that did not work as it did not make sense for the user to have to click on a mail icon to receive new mail. As a result, I decided to make a send mail microinteraction that would make the user more excited to send out emails. The inspiration behind this idea was google teams and the exciting animations that occur when submitting an assignment. (shown below) </p>
 
    </div>
 </section>
 
 <section class="image grid">
-   <img src="http://melissacabral.com/demos/ux/images/process1.jpg" alt="">
-   <img src="http://melissacabral.com/demos/ux/images/macbook.jpg" alt="">
+   <img src="teamsphto.jpeg" alt="">
+ 
 </section>
 
 <section>
@@ -62,13 +62,16 @@
 
 <section>
    <div class="container">
-      <h1>Identity & Design System</h1>
-      <p>The personality of the brand centers around what yaks love most - green, green grass!</p>
-      <p>The tone of all the messaging is designed to resonate with yaks' sarcastic wit and stubborn nature. </p>
+      <h1>The Problem:</h1>
+      <p>This project seeks to improve user excitement during the email sending process. While it takes a little more time to certain users it will without a doubt liven up the usually drab email sending experience.</p>
+      <h1>Goals and Objectives:</h1>
+      <p>The Goal if this project to create a send email button that is more exciting than the regular one and make the user feel like their mail is actually going somewhere </p>
+      <h1>Process and Insight:</h1>
+      <p>The first step towards my final project goal was to have a button that interacted on hover and I had some issues creating the hover effect on the “Send Mail” button originally because some of my source code was in scss rather than css. </p>
    </div>
 </section>
 <section class="colors">
-   <p>The interface uses color consistently to communicate. Yaks freaking love these colors:</p>
+   <p>The following colors were used for the project</p>
    <ul class="color-chips">
       <!-- customize the colors and names in the CSS!  -->
       <li class="color-1"></li>
@@ -93,5 +96,5 @@
    </div>
 </section>
 <section class="image">
-   <img src="http://via.placeholder.com/700x300?text=conclusion+image" alt="">
+   <img src="sendmail.GIF" alt="">
 </section>
